syntax = "proto2";

package com.les.model;

message UserMessage {
    required string id = 1;
    required string firstName = 2;
    required string lastName = 3;
}